--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Lthdt</h1>
+      <h1 class="title">Lap trinh Huong Doi tuong</h1>
     </header>
     <div id="container">
-      <p class="tagline">Huong Doi tuong</p>
+      <p class="tagline">LT Huong Doi tuong</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
