--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">OSS Programming</h1>
+      <h1 class="title">OSS</h1>
     </header>
     <div id="container">
       <p class="tagline">LT Huong Doi tuong</p>
